src/components/layout/navigation/MobileBottomNavbar.less
section.mobile-bottom-navbar {
  width: 100%;
  position: fixed;
  bottom: 0;
  height: 53px;
  z-index: 1000;
  background-color: white;
  border-top: 1px solid #c3d3f5;

  .navbar-buttons {
    width: 100%;

    .display-mobile {
      display: inline;
    }

    &__list-item {
      margin-top: 6px;
      width: 33%;
      margin-left: 0;

      .icon-label {
        margin-top: 6px;
      }
    }
  }
}

